--- a/portfolio.html
+++ b/portfolio.html
@@ -1,25 +1,23 @@
 <!DOCTYPE html>
 <html lang="uk">
-
+    
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="./modern-normalize/modern-normalize.css"/>
-    <link rel="stylesheet" href="./css/styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link
-        href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
-        rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="./modern-normalize/modern-normalize.css"/>
+    <link rel="stylesheet" href="./css/styles.css">
 </head>
 
 <body>
     <div class="main-portfolio">
         <header>
             <a class="logo header-logo" href="./index.html"><span class="blue-text">Web</span>Studio</a>
-            <nav>
+            <nav class="container">
                 <ul class="pages">
                     <li><a class="header-link" href="./index.html">Студія</a></li>
                     <li><a class="header-link header-link-current" href="./portfolio.html">Портфоліо</a></li>
