--- a/index.html
+++ b/index.html
@@ -13,100 +13,92 @@
 </head>
 <body class="main-index">
     <header>
-        <div class="container">
-            <a class="logo header-logo" href="./index.html"><span class="blue-text">Web</span>Studio</a>
-            <nav class="container">
-                <ul class="pages">
-                    <li><a class="header-link header-link-current" href="./index.html">Студія</a></li>
-                    <li><a class="header-link" href="./portfolio.html">Портфоліо</a></li>
-                    <li><a class="header-link">Контакти</a></li>
-                </ul>
-            </nav>
-            <ul class="contacts-header">
-                <li><a href="mailto:info@devstudio.com" class="contact">info@devstudio.com</a></li>
-                <li><a href="tel:+380961111111" class="contact">+38 096 111 11 11</a></li>
+        <a class="logo header-logo" href="./index.html"><span class="blue-text">Web</span>Studio</a>
+        <nav class="container">
+            <ul class="pages">
+                <li><a class="header-link header-link-current" href="./index.html">Студія</a></li>
+                <li><a class="header-link" href="./portfolio.html">Портфоліо</a></li>
+                <li><a class="header-link">Контакти</a></li>
             </ul>
-        </div>
+        </nav>
+        <ul class="contacts-header">
+            <li><a href="mailto:info@devstudio.com" class="contact">info@devstudio.com</a></li>
+            <li><a href="tel:+380961111111" class="contact">+38 096 111 11 11</a></li>
+        </ul>
     </header>
     <main>
-        <section class="first-part">
+        <section class="hero section">
             <h1 class="businessh1">
-                Ефективні рішення для вашого бізнесу
+                Ефективні рішення</br> для вашого бізнесу
             </h1>
             <button class="button" type="button">
                 Замовити послугу
             </button>
         </section>
-        <section class="container">
-            <div class="container">
-                <ul class="our-principles">
-                    <li>
-                        <section class="principle">
-                            <h3 class="principles-title">Увага до деталей</h3>
-                            <p>Ідейні міркування а також початок повсякденної роботи з формування позиції</p>
-                        </section>
-                    </li>
-                    <li>
-                        <section class="principle">
-                            <h3 class="principles-title">Пунктуальність</h3>
-                            <p>Задача організації, особливо рамки та місце навчання карів, що тягне за собою.</p>
-                        </section>
-                    </li>
-                    <li>
-                        <section class="principle">
-                            <h3 class="principles-title">Планування</h3>
-                            <p>Рівним чином консультація з широким активом в значному ступені визначають.</p>
-                        </section>
-                    </li>
-                    <li>
-                        <section class="principle">
-                            <h3 class="principles-title">Сучасні технології</h3>
-                            <p>Значення цих проблем настільки очевидна, що реалізація планових завдань.</p>
-                        </section>
-                    </li>
-                </ul>
-            </div>
+        <section class="section">
+            <ul class="our-principles">
+                <li>
+                    <section class="principle">
+                        <h3 class="principles-title">Увага до деталей</h3>
+                        <p>Ідейні міркування а також початок повсякденної роботи з формування позиції</p>
+                    </section>
+                </li>
+                <li>
+                    <section class="principle">
+                        <h3 class="principles-title">Пунктуальність</h3>
+                        <p>Задача організації, особливо рамки та місце навчання карів, що тягне за собою.</p>
+                    </section>
+                </li>
+                <li>
+                    <section class="principle">
+                        <h3 class="principles-title">Планування</h3>
+                        <p>Рівним чином консультація з широким активом в значному ступені визначають.</p>
+                    </section>
+                </li>
+                <li>
+                    <section class="principle">
+                        <h3 class="principles-title">Сучасні технології</h3>
+                        <p>Значення цих проблем настільки очевидна, що реалізація планових завдань.</p>
+                    </section>
+                </li>
+            </ul>
         </section>
-        <section class="what-we-do">
+        <section class="what-we-do section">
             <h2 class="section-title">Чим ми займаємося</h2>
-            <div class="container">
-                <ul class="imges-what-we-do">
-                    <li><img src="./images/кодування по алгоритму.jpg" alt="кодування по алгоритму" class="img-what-we-do"></li>
-                    <li><img src="./images/вибір дизайну.jpg" alt="вибір дизайну" class="img-what-we-do"></li>
-                    <li><img src="./images/підбір палітри кольору.jpg" alt="підбір палітри кольору" class="img-what-we-do"></li>
-                </ul>
-            </div>
+            <ul class="imges-what-we-do">
+                <li><img src="./images/кодування по алгоритму.jpg" alt="кодування по алгоритму" class="img-what-we-do"></li>
+                <li><img src="./images/вибір дизайну.jpg" alt="вибір дизайну" class="img-what-we-do"></li>
+                <li><img src="./images/підбір палітри кольору.jpg" alt="підбір палітри кольору" class="img-what-we-do"></li>
+            </ul>
         </section>
-        <section class="our-team">
+        <section class="our-team section">
             <h2 class="section-title">Наша команда</h2>
-            <div class="container">
-                <ul class="team">
-                    <li class="team-participents">
-                        <img src="./images/Ігор Дем'яненко.jpg" class="photo-of-the-participant" alt="Ігор Дем'яненко">
-                        <h3 class="name-of-participant">Ігор Дем'яненко</h3>
-                        <p class="job-title" lang="en">Product Designer</p>
-                    </li>
-                    <li class="team-participents">
-                        <img src="./images/Ольга Репина.jpg" class="photo-of-the-participant" alt="Ольга Репина">
-                        <h3 class="name-of-participant">Ольга Репина</h3>
-                        <p class="job-title" lang="en">Frontend Developer</p>
-                    </li>
-                    <li class="team-participents">
-                        <img src="./images/Микола Тарасов.jpg" class="photo-of-the-participant" alt="Микола Тарасов">
-                        <h3 class="name-of-participant">Микола Тарасов</h3>
-                        <p class="job-title" lang="en">Marketing</p>
-                    </li>
-                    <li class="team-participents">
-                        <img src="./images/Михайло Єрмаков.jpg" class="photo-of-the-participant" alt="Михайло Єрмаков">
-                        <h3 class="name-of-participant">Михайло Єрмаков</h3>
-                        <p class="job-title" lang="en">UI Designer</p>
-                    </li>
-                </ul>
-            </div>
+            <ul class="team">
+                <li class="team-participents">
+                    <img src="./images/Ігор Дем'яненко.jpg" class="photo-of-the-participant" alt="Ігор Дем'яненко">
+                    <h3 class="name-of-participant">Ігор Дем'яненко</h3>
+                    <p class="job-title" lang="en">Product Designer</p>
+                </li>
+                <li class="team-participents">
+                    <img src="./images/Ольга Репина.jpg" class="photo-of-the-participant" alt="Ольга Репина">
+                    <h3 class="name-of-participant">Ольга Репина</h3>
+                    <p class="job-title" lang="en">Frontend Developer</p>
+                </li>
+                <li class="team-participents">
+                    <img src="./images/Микола Тарасов.jpg" class="photo-of-the-participant" alt="Микола Тарасов">
+                    <h3 class="name-of-participant">Микола Тарасов</h3>
+                    <p class="job-title" lang="en">Marketing</p>
+                </li>
+                <li class="team-participents">
+                    <img src="./images/Михайло Єрмаков.jpg" class="photo-of-the-participant" alt="Михайло Єрмаков">
+                    <h3 class="name-of-participant">Михайло Єрмаков</h3>
+                    <p class="job-title" lang="en">UI Designer</p>
+                </li>
+            </ul>
         </section>
     </main>
     <footer>
-        <div class="container">
+        <div class="container-footer">
             <a class="logo footer-logo"><span class="blue-text">Web</span>Studio</a>
             <address>
                 <p class="company-adress">м. Київ, пр-т Лесі Українки, 26<br /></p>
