--- a/index.html
+++ b/index.html
@@ -13,65 +13,74 @@
 </head>
 <body class="main-index">
     <header>
-        <a class="logo header-logo" href="./index.html"><span class="blue-text">Web</span>Studio</a>
-        <nav class="container">
-            <ul class="pages">
-                <li><a class="header-link header-link-current" href="./index.html">Студія</a></li>
-                <li><a class="header-link" href="./portfolio.html">Портфоліо</a></li>
-                <li><a class="header-link">Контакти</a></li>
+        <div class="container-header">
+            <a class="logo header-logo" href="./index.html"><span class="blue-text">Web</span>Studio</a>
+            <nav class="container">
+                <ul class="pages">
+                    <li><a class="header-link header-link-current" href="./index.html">Студія</a></li>
+                    <li><a class="header-link" href="./portfolio.html">Портфоліо</a></li>
+                    <li><a class="header-link">Контакти</a></li>
+                </ul>
+            </nav>
+            <ul class="contacts-header">
+                <li><a href="mailto:info@devstudio.com" class="contact">info@devstudio.com</a></li>
+                <li><a href="tel:+380961111111" class="contact">+38 096 111 11 11</a></li>
             </ul>
-        </nav>
-        <ul class="contacts-header">
-            <li><a href="mailto:info@devstudio.com" class="contact">info@devstudio.com</a></li>
-            <li><a href="tel:+380961111111" class="contact">+38 096 111 11 11</a></li>
-        </ul>
+        </div>
     </header>
     <main>
-        <section class="hero section">
-            <h1 class="businessh1">
-                Ефективні рішення</br> для вашого бізнесу
-            </h1>
-            <button class="button" type="button">
-                Замовити послугу
-            </button>
+        <section class="hero">
+            <div class="hero-section">
+                <h1 class="businessh1">
+                    Ефективні рішення</br> для вашого бізнесу
+                </h1>
+                <button class="button" type="button">
+                    Замовити послугу
+                </button>
+            </div>
         </section>
-        <section class="section">
-            <ul class="our-principles">
-                <li>
-                    <section class="principle">
-                        <h3 class="principles-title">Увага до деталей</h3>
-                        <p>Ідейні міркування а також початок повсякденної роботи з формування позиції</p>
-                    </section>
-                </li>
-                <li>
-                    <section class="principle">
-                        <h3 class="principles-title">Пунктуальність</h3>
-                        <p>Задача організації, особливо рамки та місце навчання карів, що тягне за собою.</p>
-                    </section>
-                </li>
-                <li>
-                    <section class="principle">
-                        <h3 class="principles-title">Планування</h3>
-                        <p>Рівним чином консультація з широким активом в значному ступені визначають.</p>
-                    </section>
-                </li>
-                <li>
-                    <section class="principle">
-                        <h3 class="principles-title">Сучасні технології</h3>
-                        <p>Значення цих проблем настільки очевидна, що реалізація планових завдань.</p>
-                    </section>
-                </li>
-            </ul>
+        <section>
+            <div class="section">
+                <ul class="our-principles">
+                    <li>
+                        <section class="principle">
+                            <h3 class="principles-title">Увага до деталей</h3>
+                            <p>Ідейні міркування а також початок повсякденної роботи з формування позиції</p>
+                        </section>
+                    </li>
+                    <li>
+                        <section class="principle">
+                            <h3 class="principles-title">Пунктуальність</h3>
+                            <p>Задача організації, особливо рамки та місце навчання карів, що тягне за собою.</p>
+                        </section>
+                    </li>
+                    <li>
+                        <section class="principle">
+                            <h3 class="principles-title">Планування</h3>
+                            <p>Рівним чином консультація з широким активом в значному ступені визначають.</p>
+                        </section>
+                    </li>
+                    <li>
+                        <section class="principle">
+                            <h3 class="principles-title">Сучасні технології</h3>
+                            <p>Значення цих проблем настільки очевидна, що реалізація планових завдань.</p>
+                        </section>
+                    </li>
+                </ul>
+            </div>
         </section>
-        <section class="what-we-do section">
-            <h2 class="section-title">Чим ми займаємося</h2>
-            <ul class="imges-what-we-do">
-                <li><img src="./images/кодування по алгоритму.jpg" alt="кодування по алгоритму" class="img-what-we-do"></li>
-                <li><img src="./images/вибір дизайну.jpg" alt="вибір дизайну" class="img-what-we-do"></li>
-                <li><img src="./images/підбір палітри кольору.jpg" alt="підбір палітри кольору" class="img-what-we-do"></li>
-            </ul>
+        <section class="what-we-do">
+            <div class="section">
+                <h2 class="section-title">Чим ми займаємося</h2>
+                <ul class="imges-what-we-do">
+                    <li><img src="./images/кодування по алгоритму.jpg" alt="кодування по алгоритму" class="img-what-we-do"></li>
+                    <li><img src="./images/вибір дизайну.jpg" alt="вибір дизайну" class="img-what-we-do"></li>
+                    <li><img src="./images/підбір палітри кольору.jpg" alt="підбір палітри кольору" class="img-what-we-do"></li>
+                </ul>
+            </div>
         </section>
-        <section class="our-team section">
+        <section class="our-team">
+           <div class="section">
             <h2 class="section-title">Наша команда</h2>
             <ul class="team">
                 <li class="team-participents">
@@ -95,6 +104,7 @@
                     <p class="job-title" lang="en">UI Designer</p>
                 </li>
             </ul>
+           </div>
         </section>
     </main>
     <footer>
