--- a/portfolio.html
+++ b/portfolio.html
@@ -13,11 +13,11 @@
     <link rel="stylesheet" href="./css/styles.css">
 </head>
 
-<body class="main-portfolio">
+<body>
     <header>
         <div class="container-header">
             <a class="logo header-logo" href="./index.html"><span class="blue-text">Web</span>Studio</a>
-            <nav class="container">
+            <nav>
                 <ul class="pages">
                     <li><a class="header-link" href="./index.html">Студія</a></li>
                     <li><a class="header-link header-link-current" href="./portfolio.html">Портфоліо</a></li>
