--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="uk">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -11,11 +12,12 @@
     <link rel="stylesheet" href="../modern-normalize/modern-normalize.css">
     <link rel="stylesheet" href="./css/styles.css">
 </head>
-<body class="main-index">
+
+<body>
     <header>
         <div class="container-header">
             <a class="logo header-logo" href="./index.html"><span class="blue-text">Web</span>Studio</a>
-            <nav class="container">
+            <nav>
                 <ul class="pages">
                     <li><a class="header-link header-link-current" href="./index.html">Студія</a></li>
                     <li><a class="header-link" href="./portfolio.html">Портфоліо</a></li>
@@ -30,7 +32,7 @@
     </header>
     <main>
         <section class="hero">
-            <div class="hero-section">
+            <div class="container">
                 <h1 class="businessh1">
                     Ефективні рішення</br> для вашого бізнесу
                 </h1>
@@ -39,45 +41,33 @@
                 </button>
             </div>
         </section>
-        <section>
-            <div class="section">
-                <ul class="our-principles">
-                    <li>
-                        <section class="principle">
-                            <h3 class="principles-title">Увага до деталей</h3>
-                            <p>Ідейні міркування а також початок повсякденної роботи з формування позиції</p>
-                        </section>
-                    </li>
-                    <li>
-                        <section class="principle">
-                            <h3 class="principles-title">Пунктуальність</h3>
-                            <p>Задача організації, особливо рамки та місце навчання карів, що тягне за собою.</p>
-                        </section>
-                    </li>
-                    <li>
-                        <section class="principle">
-                            <h3 class="principles-title">Планування</h3>
-                            <p>Рівним чином консультація з широким активом в значному ступені визначають.</p>
-                        </section>
-                    </li>
-                    <li>
-                        <section class="principle">
-                            <h3 class="principles-title">Сучасні технології</h3>
-                            <p>Значення цих проблем настільки очевидна, що реалізація планових завдань.</p>
-                        </section>
-                    </li>
-                </ul>
-            </div>
+        <section class="section">
+            <ul class="our-principles container">
+                <li class="principle">
+                    <h3 class="principles-title">Увага до деталей</h3>
+                    <p>Ідейні міркування а також початок повсякденної роботи з формування позиції</p>
+                </li>
+                <li class="principle">
+                    <h3 class="principles-title">Пунктуальність</h3>
+                    <p>Задача організації, особливо рамки та місце навчання карів, що тягне за собою.</p>
+                </li>
+                <li class="principle">
+                    <h3 class="principles-title">Планування</h3>
+                    <p>Рівним чином консультація з широким активом в значному ступені визначають.</p>
+                </li>
+                <li class="principle">
+                    <h3 class="principles-title">Сучасні технології</h3>
+                    <p>Значення цих проблем настільки очевидна, що реалізація планових завдань.</p>
+                </li>
+            </ul>
         </section>
-        <section class="what-we-do">
-            <div class="section">
-                <h2 class="section-title">Чим ми займаємося</h2>
-                <ul class="imges-what-we-do">
-                    <li><img src="./images/кодування по алгоритму.jpg" alt="кодування по алгоритму" class="img-what-we-do"></li>
-                    <li><img src="./images/вибір дизайну.jpg" alt="вибір дизайну" class="img-what-we-do"></li>
-                    <li><img src="./images/підбір палітри кольору.jpg" alt="підбір палітри кольору" class="img-what-we-do"></li>
-                </ul>
-            </div>
+        <section class="what-we-do container">
+            <h2 class="section-title">Чим ми займаємося</h2>
+            <ul class="imges-what-we-do">
+                <li><img src="./images/кодування по алгоритму.jpg" alt="кодування по алгоритму" class="img-what-we-do"></li>
+                <li><img src="./images/вибір дизайну.jpg" alt="вибір дизайну" class="img-what-we-do"></li>
+                <li><img src="./images/підбір палітри кольору.jpg" alt="підбір палітри кольору" class="img-what-we-do"></li>
+            </ul>
         </section>
         <section class="our-team">
            <div class="section">
@@ -111,7 +101,7 @@
         <div class="container-footer">
             <a class="logo footer-logo"><span class="blue-text">Web</span>Studio</a>
             <address>
-                <p class="company-adress">м. Київ, пр-т Лесі Українки, 26<br /></p>
+                <p class="company-adress">м. Київ, пр-т Лесі Українки, 26</p>
                 <ul class="contacts-footer">
                     <li><a href="mailto:info@example.com" class="contact-footer">info@example.com</a></li>
                     <li><a href="tel:+380991111111" class="contact-footer">+38 099 111 11 11</a></li>
