--- a/portfolio.html
+++ b/portfolio.html
@@ -31,78 +31,78 @@
         </div>
     </header>
     <main>
-        <section class="main-portfolio">
-            <div class="section">
+        <section class="main-portfolio section">
+            <div class="container">
                 <ul class="filters">
-                    <li><button class="filter">Усе</button></li>
-                    <li><button class="filter">Веб-сайти</button></li>
-                    <li><button class="filter">Додатки</button></li>
-                    <li><button class="filter">Дизайн</button></li>
-                    <li><button class="filter">Маркетинг</button></li>
+                    <li class="filter"><button class="button-filter">Усе</button></li>
+                    <li class="filter"><button class="button-filter">Веб-сайти</button></li>
+                    <li class="filter"><button class="button-filter">Додатки</button></li>
+                    <li class="filter"><button class="button-filter">Дизайн</button></li>
+                    <li class="filter"><button class="button-filter">Маркетинг</button></li>
                 </ul>
                 <ul class="projects">
                     <li class="project">
                         <img src="./images/ноутбук з резюме.jpg" class="project-image" alt="ноутбук з резюме">
-                        <section class="project-title">
-                            <a class="project-name">Технокряк</a>
+                        <div class="project-title">
+                            <h3 class="project-name">Технокряк</h3>
                             <p class="project-type">Веб-сайт</p>
-                        </section>
+                        </div>
                     </li>
                     <li class="project">
                         <img src="./images/Два баскетболісти.jpg" class="project-image" alt="Два баскетболісти">
-                        <section class="project-title">
-                            <a class="project-name">Постер <span lang="en">Orlean vs Golden Star</span></a>
+                        <div class="project-title">
+                            <h3 class="project-name">Постер <span lang="en">Orlean vs Golden Star</span></h3>
                             <p class="project-type">Дизайн</p>
-                        </section>
+                        </div>
                     </li>
                     <li class="project">
                         <img src="./images/Логотип Seafood Restaurant.jpg" class="project-image" alt="Логотип Seafood Restaurant">
-                        <section class="project-title">
-                            <a class="project-name">Ресторан <span lang="en">Seafood</span></a>
+                        <div class="project-title">
+                            <h3 class="project-name">Ресторан <span lang="en">Seafood</span></h3>
                             <p class="project-type">Додаток</p>
-                        </section>
+                        </div>
                     </li>
                     <li class="project">
                         <img src="./images/Навушники.jpg" class="project-image" alt="Навушники">
-                        <section class="project-title">
-                            <a class="project-name">Проект <span lang="en">Prime</span></a>
+                        <div class="project-title">
+                            <h3 class="project-name">Проект <span lang="en">Prime</span></h3>
                             <p class="project-type">Маркетинг</p>
-                        </section>
+                        </div>
                     </li>
                     <li class="project">
                         <img src="./images/Дві коробочки.jpg" class="project-image" alt="Дві коробочки">
-                        <section class="project-title">
-                            <a class="project-name">Проект <span class="en">Boxes</span></a>
+                        <div class="project-title">
+                            <h3 class="project-name">Проект <span class="en">Boxes</span></h3>
                             <p class="project-type">Додаток</p>
-                        </section>
+                        </div>
                     </li>
                     <li class="project">
                         <img src="./images/Монітор компьютера.jpg" class="project-image" alt="Монітор компьютера">
-                        <section class="project-title">
-                            <a class="project-name" lang="en">Inspiration has no Borders</a>
+                        <div class="project-title">
+                            <h3 class="project-name" lang="en">Inspiration has no Borders</h3>
                             <p class="project-type">Веб-сайт</p>
-                        </section>
+                        </div>
                     </li>
                     <li class="project">
                         <img src="./images/Розворот книги.jpg" class="project-image" alt="Розворот книги">
-                        <section class="project-title">
-                            <a class="project-name">Видання <span lang="en">Limited Edition</span></a>
+                        <div class="project-title">
+                            <h3 class="project-name">Видання <span lang="en">Limited Edition</span></h3>
                             <p class="project-type">Дизайн</p>
-                            <sectione>
+                        </div>
                     </li>
                     <li class="project">
                         <img src="./images/Ярлик з одягу.jpg" class="project-image" alt="Ярлик з одягу">
-                        <section class="project-title">
-                            <a class="project-name">Проект <span lang="en">LAB</span></a>
+                        <div class="project-title">
+                            <h3 class="project-name">Проект <span lang="en">LAB</span></h3>
                             <p class="project-type">Маркетинг</p>
-                        </section>
+                        </div>
                     </li>
                     <li class="project">
                         <img src="./images/Людина працює на ноутбуці.jpg" class="project-image" alt="Людина працює на ноутбуці">
-                        <section class="project-title">
-                            <a class="project-name" lang="en">Growing Business</a>
+                        <div class="project-title">
+                            <h3 class="project-name" lang="en">Growing Business</h3>
                             <p class="project-type">Додаток</p>
-                        </section>
+                        </div>
                     </li>
                 </ul>
             </div>
