--- a/portfolio.html
+++ b/portfolio.html
@@ -112,11 +112,11 @@
             <div class="container-footer">
                 <a class="logo footer-logo"><span class="blue-text">Web</span>Studio</a>
                 <address>
-                    <p class="company-adress">м. Київ, пр-т Лесі Українки, 26<br /></p>
-                    <ul class="contacts-footer">
-                        <li><a href="mailto:info@example.com" class="contact-footer">info@example.com</a></li>
-                        <li><a href="tel:+380991111111" class="contact-footer">+38 099 111 11 11</a></li>
-                    </ul>
+                <p class="company-adress">м. Київ, пр-т Лесі Українки, 26</p>
+                <ul class="contacts-footer">
+                    <li class="li-contact-footer"><a href="mailto:info@example.com" class="contact-footer">info@example.com</a></li>
+                    <li class="li-contact-footer"><a href="tel:+380991111111" class="contact-footer">+38 099 111 11 11</a></li>
+                </ul>
                 </address>
             </div>
     </footer>
