--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         </section>
         <section class="section">
             <div class="container">
-                <ul class="our-principles container">
+                <ul class="our-principles">
                     <li class="principle">
                         <h3 class="principles-title">Увага до деталей</h3>
                         <p>Ідейні міркування а також початок повсякденної роботи з формування позиції</p>
